--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Move into project
+    - run: cd cli_scalable_project
     - name: Build
       run: cargo build --verbose
     - name: Run tests
